--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -1,12 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <script src="{% static 'main.js' %}" defer></script>
     <title>App</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h3>Carter Sucks lol</h3>
+    <div id="wrapper">
+        <div id="controls">
+            <button id="clear">Clear</button>
+        </div>
+        <canvas id="writing-canvas" height="400" width="1200"></canvas>
+    </div>
 </body>
 </html>
