--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -11,7 +11,9 @@
 <body>
     <div id="wrapper">
         <div id="controls">
-            <button id="clear">Clear</button>
+            <button class="control" id="clear">Clear</button>
+            <button class="control" id="write">Write</button>
+            <button class="control" id="erase">Erase</button>
         </div>
         <canvas id="writing-canvas" height="400" width="1200"></canvas>
     </div>
