--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -14,8 +14,10 @@
             <button class="control" id="clear">Clear</button>
             <button class="control" id="write">Write</button>
             <button class="control" id="erase">Erase</button>
+            <button class="control" id="test">Test</button>
         </div>
         <canvas id="writing-canvas" height="400" width="1200"></canvas>
+        <h1 id="output">Output:</h1>
     </div>
 </body>
 </html>
