--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="wrapper">
+        <!-- <video id="video" autoplay></video> -->
         <div id="controls">
             <button class="control" id="clear">Clear</button>
             <button class="control" id="write">Write</button>
