--- a/project/app/static/styles.css
+++ b/project/app/static/styles.css
@@ -14,7 +14,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: min(100vh, 1000px);
     width: 100vw;
     gap: 25px;
 }
