--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -9,6 +9,7 @@
     <title>App</title>
 </head>
 <body>
+    <img src="{% static 'runner.gif' %}" alt="Example GIF" id="corner-gif">
     <div id="wrapper">
         <div id="controls">
             <button class="control" id="clear">Clear</button>
