--- a/project/app/static/styles.css
+++ b/project/app/static/styles.css
@@ -38,7 +38,7 @@ h1 {
     position: absolute;
     top: 10px;
     left: 10px;
-    width: 100px; /* Adjust size as needed */
-    height: auto;
-    z-index: 10; /* Ensure it appears above other elements */
+    width: 100px;
+    height: 50px;
+    z-index: 10;
 }
