--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -14,6 +14,8 @@
         <div id="controls">
             <button class="control" id="clear">Clear</button>
             <button class="control" id="write">Write</button>
+            <button class="control" id="big">Big</button>
+            <button class="control" id="small">Small</button>
             <button class="control" id="erase">Erase</button>
             <button class="control" id="test">Test</button>
             <button class="control" id="camera">Camera</button>
